--- a/index.html
+++ b/index.html
@@ -869,16 +869,46 @@
       <h1 class="hidden section-title">Works</h1>
       <div class="hidden tab-container">
           <input id="all-work" type="radio" name="all-work" checked />
-          <label class="tab" for="all-work" onclick="handleLabelClick('all', 0, 'work', 'work-card', 'work-type')">All<span class="notification">16</span></label>
+          <label class="tab" for="all-work" onclick="handleLabelClick('all', 0, 'work', 'work-card', 'work-type')">All<span class="notification">21</span></label>
           <input id="rapidapi" type="radio" name="rapidapi" />
-          <label class="tab" for="rapidapi" onclick="handleLabelClick('rapidapi', 1, 'work', 'work-card', 'work-type')">Rapid API<span class="notification">7</span></label>
+          <label class="tab" for="rapidapi" onclick="handleLabelClick('rapidapi', 1, 'work', 'work-card', 'work-type')">Rapid API<span class="notification">8</span></label>
           <input id="figma" type="radio" name="figma" />
-          <label class="tab" for="figma" onclick="handleLabelClick('figma', 2, 'work', 'work-card', 'work-type')">Figma<span class="notification">6</span></label>
+          <label class="tab" for="figma" onclick="handleLabelClick('figma', 2, 'work', 'work-card', 'work-type')">Figma<span class="notification">7</span></label>
           <input id="githubcontribution" type="radio" name="githubcontribution" />
-          <label class="tab" for="githubcontribution" onclick="handleLabelClick('githubcontribution', 3, 'work', 'work-card', 'work-type')">Github Contribution<span class="notification">3</span></label>
+          <label class="tab" for="githubcontribution" onclick="handleLabelClick('githubcontribution', 3, 'work', 'work-card', 'work-type')">Github Contribution<span class="notification">6</span></label>
           <span class="glider"></span>
       </div>
       <div class="work-cards">
+        <div class="hidden work-card">
+          <img class="design-image" src="assests/planets-era.jpg">
+          <div class="work-desc">
+            <h2>Planets Era</h2>
+            <div class="work-desc-content">
+              <p>Got planets in mind, let's get there details!</p>
+            </div>
+            <a class="no-highlight" href="https://www.figma.com/community/file/1441589607131518971" target="_blank">
+              <span class="github-code-02 work-detail">
+                <img src="assests/Figma.png" alt="work-destination">
+                <p class="work-type figma">Figma</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="hidden work-card">
+          <img class="work-img" src="assests/my-address-api.jpg">
+          <div class="work-desc">
+            <h2>My Address API</h2>
+            <div class="work-desc-content">
+              <p>Welcome to My-Address-API, your ultimate geospatial companion designed to streamline location-related tasks! This API enables you to fetch postal codes, decode latitude and longitude into meaningful addresses, and extract detailed geospatial insights with unparalleled ease.</p>
+            </div>
+            <a class="no-highlight" href="https://rapidapi.com/sanyamjain007/api/my-address-api/" target="_blank">
+              <span class="github-code-02 work-detail">
+                <img src="assests/RapidAPI.png" alt="work-destination">
+                <p class="work-type rapidapi">Rapid API</p>
+              </span>
+            </a>
+          </div>
+        </div>
         <div class="hidden work-card">
           <img class="design-image" src="assests/Gold&Silver-Logos-Pack.png">
           <div class="work-desc">
@@ -890,6 +920,51 @@
               <span class="github-code-02 work-detail">
                 <img src="assests/Figma.png" alt="work-destination">
                 <p class="work-type figma">Figma</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="hidden work-card">
+          <img style="width: 200px" class="work-img" src="assests/github-contribution-04.png">
+          <div class="work-desc">
+            <h2>Added New Pages for Documentations</h2>
+            <div class="work-desc-content">
+              <p>Updated the website to have updated documentations. Created new pages for various versions. Raised PR request and solved the issue.</p>
+            </div>
+            <a class="no-highlight" href="https://github.com/intel-retail/automated-self-checkout/pull/651" target="_blank">
+              <span class="github-code-02 work-detail">
+                <img src="assests/GitHub.png" alt="work-destination">
+                <p class="work-type githubcontribution">Github Contribution</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="hidden work-card">
+          <img style="width: 200px" class="work-img" src="assests/github-contribution-05.png">
+          <div class="work-desc">
+            <h2>Automated Latest Version Update</h2>
+            <div class="work-desc-content">
+              <p>Programmed a JavaScript algorithm to automatically update the latest page to the latest available version of the repository. Raised PR and solved the issue.</p>
+            </div>
+            <a class="no-highlight" href="https://github.com/intel-retail/automated-self-checkout/pull/649" target="_blank">
+              <span class="github-code-02 work-detail">
+                <img src="assests/GitHub.png" alt="work-destination">
+                <p class="work-type githubcontribution">Github Contribution</p>
+              </span>
+            </a>
+          </div>
+        </div>
+        <div class="hidden work-card">
+          <img style="width: 200px" class="work-img" src="assests/github-contribution-06.png">
+          <div class="work-desc">
+            <h2>New Feature Integration in intel-retail</h2>
+            <div class="work-desc-content">
+              <p>Worked as a team and added a new feature of grafana in intel-retail repository. Raised a PR request and was successfully merged with the repository.</p>
+            </div>
+            <a class="no-highlight" href="https://github.com/intel-retail/automated-self-checkout/pull/640" target="_blank">
+              <span class="github-code-02 work-detail">
+                <img src="assests/GitHub.png" alt="work-destination">
+                <p class="work-type githubcontribution">Github Contribution</p>
               </span>
             </a>
           </div>
