--- a/index.html
+++ b/index.html
@@ -895,7 +895,7 @@
           </div>
         </div>
         <div class="hidden work-card">
-          <img class="work-img" src="assests/my-address-api.jpg">
+          <img class="work-img" src="assests/my-address-api.png">
           <div class="work-desc">
             <h2>My Address API</h2>
             <div class="work-desc-content">
