--- a/index.html
+++ b/index.html
@@ -104,10 +104,10 @@
                   <span>Repository</span>
                 </div>
               </a>
-              <a class="no-highlight-certificate" href="https://www.routledge.com/AI-and-Blockchain-in-Smart-Grids-Fundamentals-Methods-and-Applications/Tiwari-KumarTyagi/p/book/9781032812960?srsltid=AfmBOoolE713j2EDW4B7Nv7vROGa5HjPH_p9_dScq-illqoPv4ah8oAr" target="_blank">
+              <a class="no-highlight-certificate" href="https://doi.org/10.1201/9781003500391" target="_blank">
                 <span class="certificate">
                   <img class="certificate-icon" src="assests/paper.png" alt="book" />
-                  <span>Book</span>
+                  <span>Paper</span>
                 </span>
               </a>
               <span class="project-highlight">Submitted: June, 2024</span>
