--- a/index.html
+++ b/index.html
@@ -87,7 +87,6 @@
                   <span>Repository</span>
                 </div>
               </a>
-              <span class="project-highlight">Submitted: Sep, 2024</span>
             </div>
           </div>
         </div>
@@ -110,7 +109,6 @@
                   <span>Paper</span>
                 </span>
               </a>
-              <span class="project-highlight">Submitted: June, 2024</span>
             </div>
           </div>
         </div>
@@ -127,7 +125,6 @@
                   <span>Presentation</span>
                 </span>
               </a>
-              <span class="project-highlight">Submitted: Apr, 2024</span>
             </div>
           </div>
         </div>
@@ -156,7 +153,6 @@
                   <span>Paper</span>
                 </span>
               </a>
-              <span class="project-highlight">Submitted: Aug, 2023</span>
             </div>
           </div>
         </div>
@@ -191,7 +187,6 @@
                   <span>Paper</span>
                 </span>
               </a>
-              <span class="project-highlight">Submitted: Aug, 2023</span>
             </div>
           </div>
         </div>
@@ -220,7 +215,6 @@
                   <span>Paper</span>
                 </span>
               </a>
-              <span class="project-highlight">Submitted: Aug, 2023</span>
             </div>
           </div>
         </div>
@@ -361,9 +355,9 @@
       <h1 class="hidden section-title">Achievements</h1>
       <div class="hidden tab-container">
           <input id="all-achievement" type="radio" name="all-achievement" checked />
-          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">19</span></label>
+          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">20</span></label>
           <input id="hackathon" type="radio" name="hackathon" />
-          <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">8</span></label>
+          <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">9</span></label>
           <input id="award" type="radio" name="award" />
           <label class="tab" for="award" onclick="handleLabelClick('award', 2, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">3</span></label>
           <input id="others" type="radio" name="others" />
@@ -373,10 +367,31 @@
       <div class="achievement-cards">
         <div class="hidden achievement-card">
           <div class="achievement-desc">
+            <img src="assests/achievement-card-19.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Third Runner Up</h2>
+              <p>Hack the Vision (By Intel), Arizona State University</p>
+              <div class="achievement-highlight">
+                <span>Team: 3</span>
+                <a class="no-highlight" href="https://drive.google.com/file/d/1ZuP4mFf59fPARDgNIUR6lCMI71-9jL4d/view?usp=sharing" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/certificate.png" alt="certificate">
+                    <p>Certificate</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type competition">Hackathon</span>
+            </div>
+          </div>
+        </div>
+        <div class="hidden achievement-card">
+          <div class="achievement-desc">
             <img src="assests/achievement-card-18.png" alt="achievement-icon">
             <div class="achievement-desc-content">
               <h2>Project Submission</h2>
-              <p>Principled Innovation Academy Problem Solving Event</p>
+              <p>Principled Innovation Academy, Arizona State University</p>
               <div class="achievement-highlight">
                 <span>Team: 4</span>
                 <a class="no-highlight" href="https://drive.google.com/file/d/10dYCQyFvWV4StLtwsAN5M8k3dVUtCORe/view?usp=sharing" target="_blank">
