--- a/index.html
+++ b/index.html
@@ -788,13 +788,82 @@
     <div id="project">
       <h1 class="hidden section-title title-project">Projects</h1>
       <div class="project-cards">
+        <div class="hidden project-card-odd">
+          <div class="right-gradient-odd"></div>
+          <div class="project-block-odd">
+            <span>Group project</span>
+            <p class="project-title">Vision Vault</p>
+            <div class="project-desc-odd">
+              <p>Vision Vault processes videos by detecting and blurring faces to protect privacy. It encrypts the face data using symmetric encryption (Fernet) and allows selective restoration of specific frames by decrypting the face data with the correct keys, ensuring secure video handling while preserving key content integrity.</p>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Vision-Vault" target="_blank">
+                <div class="github-code-02">
+                  <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+            </div>
+            <img src="assests/project-icon.png" alt="icon" />
+            <img src="assests/project-icon.png" alt="icon" />
+          </div>
+          <div class="project-img-odd project-0">
+            <div></div>
+          </div>
+        </div>
         <div class="hidden project-card-even">
           <div class="right-gradient-even"></div>
-          <div class="project-img-even project-0">
+          <div class="project-img-even project-1">
             <div></div>
           </div>
           <div class="project-block-even">
-            <span>Featured project</span>
+            <span>Group project</span>
+            <p class="project-title">Full Plates</p>
+            <div class="project-desc-even">
+              <p>Full Plates is a web platform that connects restaurants with NGOs to reduce food waste and alleviate hunger. By facilitating the donation of leftover food, which is transported and stored through sponsored services, we ensure that excess food reaches those in need, making a positive impact on both food conservation and communities.</p>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/full-plates" target="_blank">
+                <div class="github-code-02">
+                  <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/full-plates" target="_blank">
+                <div class="github-code-02">
+                  <img class="github-icon-02" src="assests/Web.png" alt="websites" />
+                  <span>Website</span>
+                </div>
+              </a>
+            </div>
+            <img src="assests/project-icon.png" alt="icon" />
+            <img src="assests/project-icon.png" alt="icon" />
+          </div>
+        </div>
+        <div class="hidden project-card-odd">
+          <div class="right-gradient-odd"></div>
+          <div class="project-block-odd">
+            <span>Personal project</span>
+            <p class="project-title">Trash Sale</p>
+            <div class="project-desc-odd">
+              <p>Trash Seller is a platform that uses AI and image recognition to identify and estimate the value of your waste. Upload a photo, sell your items, and earn money while promoting recycling and reducing pollution. Turn your trash into cash and make a positive environmental impact!</p>
+              <a class="no-highlight" href="https://github.com/Sanyam-jain30/Trash-Seller" target="_blank">
+                <div class="github-code-02">
+                  <img class="github-icon-02" src="assests/GitHub.png" alt="code" />
+                  <span>Repository</span>
+                </div>
+              </a>
+            </div>
+            <img src="assests/project-icon.png" alt="icon" />
+            <img src="assests/project-icon.png" alt="icon" />
+          </div>
+          <div class="project-img-odd project-2">
+            <div></div>
+          </div>
+        </div>
+        <div class="hidden project-card-even">
+          <div class="right-gradient-even"></div>
+          <div class="project-img-even project-3">
+            <div></div>
+          </div>
+          <div class="project-block-even">
+            <span>Personal project</span>
             <p class="project-title">Disease Diet Restaurant Finder</p>
             <div class="project-desc-even">
               <p>A mobile application to find restaurants which are best fit to a disease patient diet using their disease name and also providing map display of the restaurant from our place with suggested and safe food items can have.</p>
@@ -812,7 +881,7 @@
         <div class="hidden project-card-odd">
           <div class="right-gradient-odd"></div>
           <div class="project-block-odd">
-            <span>Featured project</span>
+            <span>Personal project</span>
             <p class="project-title">Different Hand gesture Recognition using CNN</p>
             <div class="project-desc-odd">
               <p>An application which can classify 10 different type of Hand gestures using CNN and python. With an high accuracy. Moreover, the application can also identify the same in real time video or webcam taking care of noise in image.</p>
@@ -826,17 +895,17 @@
             <img src="assests/project-icon.png" alt="icon" />
             <img src="assests/project-icon.png" alt="icon" />
           </div>
-          <div class="project-img-odd project-1">
+          <div class="project-img-odd project-4">
             <div></div>
           </div>
         </div>
         <div class="hidden project-card-even">
           <div class="right-gradient-even"></div>
-          <div class="project-img-even project-2">
+          <div class="project-img-even project-5">
             <div></div>
           </div>
           <div class="project-block-even">
-            <span>Featured project</span>
+            <span>Group project</span>
             <p class="project-title">Windows Secure Folder using Mobile Authentication</p>
             <div class="project-desc-even">
               <p>An windows application to secure windows file/folder of an user using password without storing it in cloud or temp files. The application generate a strong password for file and deliver to the user using SMTP protocol after encryption. </p>
@@ -854,7 +923,7 @@
         <div class="hidden project-card-odd">
           <div class="right-gradient-odd"></div>
           <div class="project-block-odd">
-            <span>Featured project</span>
+            <span>Group project</span>
             <p class="project-title">Covid-19 All-in-one website</p>
             <div class="project-desc-odd">
               <p>An all-in-one web application for Covid-19 disease. Which contains all of the details including symptoms, precautions, vaccines, blogs, cases count, and guidelines. </p>
@@ -868,7 +937,7 @@
             <img src="assests/project-icon.png" alt="icon" />
             <img src="assests/project-icon.png" alt="icon" />
           </div>
-          <div class="project-img-odd project-3">
+          <div class="project-img-odd project-6">
             <div></div>
           </div>
         </div>
