--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <div class="achievement-desc">
             <img class="achievement-illustration" src="assests/achievement-card-19.png" alt="achievement-icon">
             <div class="achievement-desc-content">
-              <h2>Third Runner Up</h2>
+              <h2>Second Runner Up</h2>
               <p>Hack the Vision (By Intel), Arizona State University</p>
               <div class="achievement-highlight">
                 <span>Team: 3</span>
