--- a/index.html
+++ b/index.html
@@ -374,9 +374,9 @@
       <h1 class="hidden section-title">Achievements</h1>
       <div class="hidden tab-container">
           <input id="all-achievement" type="radio" name="all-achievement" checked />
-          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">20</span></label>
+          <label class="tab" for="all-achievement" onclick="handleLabelClick('all', 0, 'achievement', 'achievement-card', 'achievement-type')">All<span class="notification">22</span></label>
           <input id="hackathon" type="radio" name="hackathon" />
-          <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">9</span></label>
+          <label class="tab" for="hackathon" onclick="handleLabelClick('competition', 1, 'achievement', 'achievement-card', 'achievement-type')">Competition<span class="notification">11</span></label>
           <input id="award" type="radio" name="award" />
           <label class="tab" for="award" onclick="handleLabelClick('award', 2, 'achievement', 'achievement-card', 'achievement-type')">Award<span class="notification">3</span></label>
           <input id="others" type="radio" name="others" />
@@ -392,6 +392,48 @@
           </select>
       </div>
       <div class="achievement-cards">
+        <div class="hidden achievement-card">
+          <div class="achievement-desc">
+            <img class="achievement-illustration" src="assests/achievement-card-21.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>Second Runner Up</h2>
+              <p>Winner of DevHacks, Arizona State University</p>
+              <div class="achievement-highlight">
+                <span>Team: 4</span>
+                <a class="no-highlight" href="https://devpost.com/software/renvue" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/project.png" alt="project">
+                    <p>Project</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type competition">Hackathon</span>
+            </div>
+          </div>
+        </div>
+        <div class="hidden achievement-card">
+          <div class="achievement-desc">
+            <img class="achievement-illustration" src="assests/achievement-card-20.png" alt="achievement-icon">
+            <div class="achievement-desc-content">
+              <h2>First Runner Up</h2>
+              <p>AI Hackathon, Arizona State University</p>
+              <div class="achievement-highlight">
+                <span>Team: 4</span>
+                <a class="no-highlight" href="https://airtable.com/appZBbWnd2B1UQmnU/shrUpHJZTdr1FpVAL" target="_blank">
+                  <span class="certificate">
+                    <img class="certificate-icon" src="assests/project.png" alt="project">
+                    <p>Project</p>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <div>
+              <span class="achievement-type competition">Hackathon</span>
+            </div>
+          </div>
+        </div>
         <div class="hidden achievement-card">
           <div class="achievement-desc">
             <img class="achievement-illustration" src="assests/achievement-card-19.png" alt="achievement-icon">
