--- a/index.html
+++ b/index.html
@@ -396,8 +396,8 @@
           <div class="achievement-desc">
             <img class="achievement-illustration" src="assests/achievement-card-21.png" alt="achievement-icon">
             <div class="achievement-desc-content">
-              <h2>Second Runner Up</h2>
-              <p>Winner of DevHacks, Arizona State University</p>
+              <h2>Track Winner</h2>
+              <p>DevHacks, Arizona State University</p>
               <div class="achievement-highlight">
                 <span>Team: 4</span>
                 <a class="no-highlight" href="https://devpost.com/software/renvue" target="_blank">
