--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="#about">About</a>
         <a href="#research">Research</a>
         <a href="#grade">Grade</a>
-        <a href="#internship">Internships</a>
+        <a href="#experience">Experiences</a>
         <a href="#achievement">Achievements</a>
         <a href="#project">Projects</a>
         <a href="#work">Works</a>
@@ -23,7 +23,7 @@
           <a href="#about">About</a>
           <a href="#research">Research</a>
           <a href="#grade">Grade</a>
-          <a href="#internship">Internships</a>
+          <a href="#experience">Experiences</a>
           <a href="#achievement">Achievements</a>
           <a href="#project">Projects</a>
           <a href="#work">Works</a>
@@ -241,6 +241,7 @@
           <span class="project-highlight more-content" style="float: right;">+1 more</span>
         </div> -->
       </div>
+      <button class="load-more-btn">Load More (2 remaining)</button>
     </div>
     <div id="grade">
       <div class="hidden center-gradient"></div>
@@ -313,9 +314,9 @@
         </div>
       </div>
     </div>
-    <div id="internship">
+    <div id="experience">
       <div class="hidden center-gradient"></div>
-      <h1 class="hidden section-title">Internships</h1>
+      <h1 class="hidden section-title">Experiences</h1>
       <div class="intern-cards">
         <div class="hidden intern-card">
           <span class="intern-dur">Jan 2024 - June 2024</span>
@@ -902,6 +903,7 @@
           </div>
         </div>
       </div>
+      <button class="load-more-btn">Load More (18 remaining)</button>
     </div>
     <div id="project">
       <h1 class="hidden section-title title-project">Projects</h1>
@@ -1063,6 +1065,7 @@
           <span class="project-highlight" style="float: right;">+1 more</span>
         </div> -->
       </div>
+      <button class="load-more-btn">Load More (3 remaining)</button>
     </div>
     <div id="work">
       <div class="hidden center-gradient"></div>
@@ -1405,6 +1408,7 @@
           </div>
         </div>
       </div>
+      <button class="load-more-btn">Load More (13 remaining)</button>
     </div>
     <div class="end-container">
       Thank you for visiting my portfolio, Sanyam Jain
